new web services with same details as existing WS

--- a/projects/acme-demo-flight-webservice/.settings/org.hibernate.eclipse.console.prefs
+++ b/projects/acme-demo-flight-webservice/.settings/org.hibernate.eclipse.console.prefs
@@ -1,3 +1,4 @@
-default.configuration=AcmeDemo (1)
+default.configuration=
 eclipse.preferences.version=1
 hibernate3.enabled=true
+namingStrategy.enabled=false
