--- a/projects/acme-demo-hotel-service/pom.xml
+++ b/projects/acme-demo-hotel-service/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>demo</groupId>
-  <artifactId>acmeHotel</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <artifactId>acme-hotel-service</artifactId>
+  <version>1.0</version>
   <packaging>war</packaging>
 </project>
