--- a/projects/pom.xml
+++ b/projects/pom.xml
@@ -34,6 +34,7 @@
   <modules>
     <module>acme-demo-flight-service</module>
     <module>acme-demo-hotel-service</module>
+    <module>acme-data-model</module>
   </modules>
 
   <repositories>
