adding external UI related changes

--- a/projects/pom.xml
+++ b/projects/pom.xml
@@ -36,6 +36,7 @@
     <module>acme-demo-hotel-service</module>
     <module>acme-data-model</module>
     <module>instance-generator</module>
+    <module>external-client-ui-form</module>
   </modules>
 
   <repositories>
