changed email address to the point to a fake/dedicated created address

--- a/support/CustomWorkItemHandlers.conf
+++ b/support/CustomWorkItemHandlers.conf
@@ -2,6 +2,6 @@
   "Log": new org.jbpm.process.instance.impl.demo.SystemOutWorkItemHandler(),
   "WebService": new org.jbpm.process.workitem.webservice.WebServiceWorkItemHandler(ksession),
   "Rest": new org.jbpm.process.workitem.rest.RESTWorkItemHandler(),
-  "Email" : new org.jbpm.process.workitem.email.EmailWorkItemHandler("mail.chengeta.net", "26", "admin@chengeta.net", "TEl$2mHZ8Q{6")
+  "Email" : new org.jbpm.process.workitem.email.EmailWorkItemHandler("mail.chengeta.net", "26", "jboss@chengeta.net", "cx!&m^,%lP-k")
 
 ]
