--- a/.demo-config.json
+++ b/.demo-config.json
@@ -1,9 +1,7 @@
 {
   "name":"JBoss BPM Travel Agency Demo",
-  "summary":"This is an online employee travel booking process project. It contains multiple web services for looking up data for the process, rules to calculate pricing, decision table, compensations features that are triggered when paying with fraud detected credit card.
-
-Install options - local, OpenShift and Docker.",
-  "author":"Niraj Patel, Shepherd Chengeta, Andrew Block, Eric D. Schabell"
+  "summary":"This is an online employee travel booking process project. It contains multiple web services for looking up data for the process, rules to calculate pricing, decision table, compensations features that are triggered when paying with fraud detected credit card. Install options - local, OpenShift and Docker.",
+  "author":"Niraj Patel, Shepherd Chengeta, Andrew Block, Eric D. Schabell",
   "categories":["brms","bpms"],
   "level":"Easy Peasy",
   "published":true,
