Added more roles to remove warnings from logs.

--- a/support/userinfo.properties
+++ b/support/userinfo.properties
@@ -2,3 +2,6 @@ erics=erics@domain.com:en-UK:erics
 Administrator=administrator@domain.com:en-UK:Administrator           
 Administrators=administrators@domain.com:en-UK:Administrators:[Administrator]
 manager=manager@domain.com:en-UK:manager:[erics]
+reviewerrole=reviewerrole@domain.com:en-UK:reviewerrole:[erics]
+employeebookingrole=employeebookingrole@domain.com:en-UK:employeebookingrole:[erics]
+taskuser=taskuser@domain.com:en-UK:taskuser:[erics]
