--- a/projects/pom.xml
+++ b/projects/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.jboss</groupId>
     <artifactId>jboss-parent</artifactId>
-    <version>16</version>
+    <version>16.0.0.redhat-1</version>
   </parent>
 
   <name>JBoss BPM Travel Agency parent</name>
