--- a/support/docker/Dockerfile
+++ b/support/docker/Dockerfile
@@ -7,14 +7,14 @@ MAINTAINER Andrew Block <andy.block@gmail.com>
 # Environment Variables 
 ENV BPMS_HOME /opt/jboss/bpms/jboss-eap-6.4
 ENV BPMS_VERSION_MAJOR 6
-ENV BPMS_VERSION_MINOR 2
+ENV BPMS_VERSION_MINOR 3
 ENV BPMS_VERSION_MICRO 0
-ENV BPMS_VERSION_PATCH BZ-1299002
+ENV BPMS_VERSION_PATCH GA
 
 ENV EAP_VERSION_MAJOR 6
 ENV EAP_VERSION_MINOR 4
 ENV EAP_VERSION_MICRO 0
-ENV EAP_VERSION_PATCH 4
+ENV EAP_VERSION_PATCH 7
 
 # ADD Installation Files
 COPY support/installation-bpms support/installation-eap support/installation-bpms.variables support/installation-eap.variables installs/jboss-bpmsuite-installer-$BPMS_VERSION_MAJOR.$BPMS_VERSION_MINOR.$BPMS_VERSION_MICRO.$BPMS_VERSION_PATCH.jar installs/jboss-eap-$EAP_VERSION_MAJOR.$EAP_VERSION_MINOR.$EAP_VERSION_MICRO-installer.jar installs/jboss-eap-$EAP_VERSION_MAJOR.$EAP_VERSION_MINOR.$EAP_VERSION_PATCH-patch.zip /opt/jboss/
