--- a/projects/pom.xml
+++ b/projects/pom.xml
@@ -27,9 +27,20 @@
 
   <name>JBoss BPM Travel Agency parent</name>
   <artifactId>bpm-travel-agency-parent</artifactId>
-  <groupId>org.jboss</groupId>
   <version>1.0</version>
   <packaging>pom</packaging>
+  
+  <build>
+  	<pluginManagement>
+  		<plugins>
+  			<plugin>
+  				<groupId>org.apache.maven.plugins</groupId>
+  				<artifactId>maven-resources-plugin</artifactId>
+  				<version>3.0.1</version>		
+  			</plugin>
+  		</plugins>
+  	</pluginManagement>
+  </build>
 
   <modules>
     <module>acme-demo-flight-service</module>
