--- a/projects/pom.xml
+++ b/projects/pom.xml
@@ -2,12 +2,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
+	<!--
 	<parent>
 		<groupId>org.jboss</groupId>
 		<artifactId>jboss-parent</artifactId>
 		<version>16.0.0.redhat-1</version>
 	</parent>
+	-->
+
 	<name>JBoss BPM Travel Agency parent</name>
+	<groupId>org.jboss</groupId>
 	<artifactId>bpm-travel-agency-parent</artifactId>
 	<version>1.0</version>
 	<packaging>pom</packaging>
